[package]
name = "okf"
version = "0.1.0"
authors = ["deagahelio <16138291+deagahelio@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
anyhow = "1.0.19"
lazy_static = "1.4.0"
rand = "0.7.2"